--- a/app/css/app.css
+++ b/app/css/app.css
@@ -383,6 +383,14 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
+.errorBox{
+	color:white; 
+	background-color:red; 
+	font-weight:bold; 
+	padding:10px;
+	margin-bottom:10px;
+}
+
 .www_FlowSlider_com-branding {
 	/*display: none !important;*/
 	margin-top: -100px !important;
