--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -74,7 +74,7 @@
 				{{hotel.email}}
 			</div>
 			<div class="col-md-9">
-					<div image-carousel ></div>
+					<div image-carousel val="hotel.images"></div>
 					<div class="hotel-desc">
 						{{hotel.desc}}
 					</div>
