added rating hotel

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -6,7 +6,7 @@
 			<div class="hotel-header1">
 				{{hotel.name}}
 			</div>
-			<div hotel-rating rating-value="rating" max="5">  </div>
+			<div hotel-rating rating-value="hotel.rating" max="5">  </div>
 		</div>
 
 		<div class="row">
