--- a/app/partials/reservation.html
+++ b/app/partials/reservation.html
@@ -450,8 +450,8 @@
 						<input type="checkbox" ng-model="agreeCheck" name="agreeCheck" required> </input> I have read and accepted the terms and conditions <br/>
 					</div>
 			</div>
-				<button type="submit" class="btn btn-default btn-m booking-btn" ng-disabled="isError()">
-					<i class="glyphicon glyphicon-arrow-right"></i> Book
+				<button type="submit" class="btn btn-success btn-m booking-btn" ng-disabled="isError()">
+					<i class="glyphicon glyphicon-ok"></i> Book
 				</button>
 		</div>
 		
