--- a/app/partials/reservation.html
+++ b/app/partials/reservation.html
@@ -302,7 +302,7 @@
 					  
 					  <label name="contactNumber">Contact number (mobile prefered) *</label><br/>
 					  <div class="input-group" style="width:100%; margin-bottom:10px;">
-						  <input class="form-control" ng-pattern="[0-9]" type="number" name="contactNumber" ng-model="contactNumber" required/>
+						  <input id="contactNumber" ng-pattern="[0-9]" class="form-control" type="number" name="contactNumber" ng-model="contactNumber" required/>
 						  <span ng-show="form.contactNumber.$dirty && form.contactNumber.$valid" class="input-group-addon form-addon-ok"><i class="glyphicon glyphicon-ok"></i></span>
 						  <span ng-show="form.contactNumber.$dirty && form.contactNumber.$invalid" class="input-group-addon form-addon-no"><i class="glyphicon glyphicon-remove"></i></span>
 					  </div>
@@ -364,7 +364,7 @@
 					  
 					  <label name="postcode">Post code *</label><br/>
 					  <div class="input-group" style="width:100%; margin-bottom:10px;">
-						<input class="form-control" ng-pattern="[0-9]" type="number" name="postcode" ng-model="postcode" required/>
+						<input id="postcode" ng-pattern="[0-9]" class="form-control" type="number" name="postcode" ng-model="postcode" required/>
 						<span ng-show="form.postcode.$dirty && form.postcode.$valid" class="input-group-addon form-addon-ok"><i class="glyphicon glyphicon-ok"></i></span>
 						<span ng-show="form.postcode.$dirty && form.postcode.$invalid" class="input-group-addon form-addon-no"><i class="glyphicon glyphicon-remove"></i></span>
 					  </div>
@@ -411,8 +411,8 @@
 					<label name="cardType">Card type *</label><br/>
 					<select class="form-control" ng-model="cardType" name="cardType" ng-options="c.name for c in cards"></select>
 					<label name="cardNumber">Card number *</label><br/>
-					<div class="input-group" style="width:100%; margin-bottom:10px;">
-					  <input ng-pattern="[0-9]" class="form-control" type="number" name="cardNumber" ng-model="cardNumber" required/>
+					<div class="input-group" ng-pattern="[0-9]" style="width:100%; margin-bottom:10px;">
+					  <input id="cardNumber" class="form-control" type="number" name="cardNumber" ng-model="cardNumber" required/>
 					  <span ng-show="form.cardNumber.$dirty && form.cardNumber.$valid" class="input-group-addon form-addon-ok"><i class="glyphicon glyphicon-ok"></i></span>
 					  <span ng-show="form.cardNumber.$dirty && form.cardNumber.$invalid" class="input-group-addon form-addon-no"><i class="glyphicon glyphicon-remove"></i></span>
 					</div>
@@ -424,7 +424,7 @@
 					  
 					  <label name="cardCCV">Card CCV *</label><br/>
 					 <div class="input-group" style="width:100%; margin-bottom:10px;">
-					  <input ng-pattern="[0-9]" class="form-control" type="number" name="cardCCV" ng-model="cardCCV" required/>
+					  <input id="cardCCV" ng-pattern="[0-9]" class="form-control" type="number" name="cardCCV" ng-model="cardCCV" required/>
 					  <span ng-show="form.cardCCV.$dirty && form.cardCCV.$valid" class="input-group-addon form-addon-ok"><i class="glyphicon glyphicon-ok"></i></span>
 					  <span ng-show="form.cardCCV.$dirty && form.cardCCV.$invalid" class="input-group-addon form-addon-no"><i class="glyphicon glyphicon-remove"></i></span>
 					</div>
