--- a/app/css/app.css
+++ b/app/css/app.css
@@ -398,6 +398,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .carousel-img-item {
 	margin: 0 5px;
+	cursor: pointer;
 }
 
 .carousel-img-item > img {
